--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body{
     background-color: #ffffff;
 }
@@ -5,8 +6,8 @@ body{
 .gridbox {
     display: grid;
     grid-template-columns: auto auto auto;
-    background-color: #ffffff;
-    padding: 10px;
+    background-color: #000000;
+    padding: 0px;
   }
   .griditem {
     background-color: #ffffff;
@@ -16,3 +17,35 @@ body{
     text-align: center;
   }
 
+
+.container{
+    margin: auto;
+    margin-bottom: 50px;
+    width: 71%;
+    /* border: 3px solid #73AD21; */
+    padding: 15px;
+    padding-bottom: 1px;
+    text-align: center;
+    background-color: #ffffff;
+    /* font-family: 'Karla', sans-serif; */
+  font-family: 'Space Grotesk', sans-serif;
+  }
+
+  .gridbox{
+    width: 20%;
+    height: 40%;
+    z-index: 9;
+    position: absolute;
+    opacity: 0.3;
+    margin-left: 340px;
+    margin-top: 220px;
+  }
+
+.container img{
+    max-width: 100%;
+}
+
+
+#logo img{
+    width: 1000%;
+  }
